# k8sdemo

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
k8s/: django-config.yaml  django-secret.yaml  postgresql-secret.yaml
src/src/: asgi.py  settings.py  urls.py  wsgi.py
src/users/: controllers.py  schema.py
src/users/migrations/: 0001_initial.py
