[project]
name = "k8sdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
    "celery[redis]>=5.6.3",
    "django>=6.0.5",
    "django-ninja>=1.6.2",
    "django-ninja-extra>=0.31.4",
    "django-prometheus>=2.4.0",
    "gunicorn>=26.0.0",
    "isort>=8.0.1",
    "psycopg2>=2.9.12",
    "ruff>=0.15.14",
]
